force-app/main/default/objects/BIP_PI__c/BIP_PI__c.object-meta.xml
<CustomObject>
    <label>BIP PI</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>BIP PI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BIP Pis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>