force-app/main/default/objects/BIP_PI__c/fields/BIP_Request__c.field-meta.xml
<CustomField>
    <fullName>BIP_Request__c</fullName>
    <label>BIP Request</label>
    <referenceTo>BIP_Request__c</referenceTo>
    <relationshipLabel>BIP Pis</relationshipLabel>
    <relationshipName>BIP_Pis</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>