force-app/main/default/objects/BIP_PI__c/fields/PI__c.field-meta.xml
<CustomField>
    <fullName>PI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PI</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BIP Pis</relationshipLabel>
    <relationshipName>BIP_Pis</relationshipName>
    <type>Lookup</type>
</CustomField>