force-app/main/default/objects/BIP_PI__c/fields/PI_MIT_ID__c.field-meta.xml
<CustomField>
    <fullName>PI_MIT_ID__c</fullName>
    <formula>PI__r.PersonContact.MitId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PI MIT ID</label>
    <type>Text</type>
</CustomField>