force-app/main/default/objects/BIP_PI__c/fields/Requested_Action__c.field-meta.xml
<CustomField>
    <fullName>Requested_Action__c</fullName>
    <label>Requested Action</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request background case review from proposal</fullName>
            </value>
            <value>
                <fullName>Report undisclosed background IP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>