force-app/main/default/objects/BIP_PI__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary PI</fullName>
            </value>
            <value>
                <fullName>Additional PI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>