force-app/main/default/objects/BIP_PI__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Assignment</fullName>
            </value>
            <value>
                <fullName>Pending Feedback</fullName>
            </value>
            <value>
                <fullName>Feedback Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>