force-app/main/default/objects/BIP_PI__c/fields/TLO_Officer_Email__c.field-meta.xml
<CustomField>
    <fullName>TLO_Officer_Email__c</fullName>
    <label>TLO Officer Email`</label>
    <type>Email</type>
</CustomField>