force-app/main/default/objects/BIP_PI__c/fields/TLO_Officer_MIT_ID__c.field-meta.xml
<CustomField>
    <fullName>TLO_Officer_MIT_ID__c</fullName>
    <label>TLO Officer MIT ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>