force-app/main/default/objects/BIP_PI__c/fields/TLO_Officer_Name__c.field-meta.xml
<CustomField>
    <fullName>TLO_Officer_Name__c</fullName>
    <label>TLO Officer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>